tests/ui/wch_c_nul_end.stderr
error: C-style string cannot contain nul characters
 --> $DIR/wch_c_nul_end.rs:3:32
  |
3 | const NUL_END: &[u16] = wch_c!("nul byte end\0");
  |                                ^^^^^^^^^^^^^^^^
