tests/ui/wch_c_nul_end.rs
use wchar::wch_c;

const NUL_END: &[u16] = wch_c!("nul byte end\0");

fn main() {}
